<?xml version="1.0"?>
<package format="2">
  <name>ros2_bridge</name>
  <version>0.0.0</version>
  <description>The ros2_bridge package</description>

  <maintainer email="otsu@jpl.nasa.gov">Kyon Otsu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <test_depend>rostest</test_depend>
  <export>
  </export>
</package>
